--- a/src/site/antora/modules/ROOT/partials/features/config-properties.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/config-properties.adoc
@@ -15,31 +15,7 @@
     limitations under the License.
 ////
 
-[tabs]
-=====
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable Java properties configuration.
 
-log4j2.xml::
-+
---
-include::partial$features/config-xml.adoc[]
---
-
-log4j2.json::
-+
---
-include::partial$features/config-json.adoc[]
---
-
-log4j2.yaml::
-+
---
-include::partial$features/config-yaml.adoc[]
---
-
-log4j2.properties::
-+
---
-include::partial$features/config-properties.adoc[]
---
-
-=====
+No dependency required.
