--- a/src/site/antora/modules/ROOT/pages/manual/async.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/async.adoc
@@ -47,7 +47,7 @@ include::partial$manual/async-trade-offs.adoc[leveloffset=+1]
 
 In order to use async loggers, you need to add LMAX Disruptor to you application's dependencies, by adding the following dependency to your build tool:
 
-include::partial$manual/dependencies-log4j-async-logger.adoc[]
+include::partial$features/async-logger.adoc[]
 
 [#configuration]
 == Configuration
