--- a/src/site/antora/modules/ROOT/partials/features/async-logger.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/async-logger.adoc
@@ -15,31 +15,27 @@
     limitations under the License.
 ////
 
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable Asynchronous Loggers.
+
 [tabs]
-=====
-
-log4j2.xml::
+====
+Maven::
 +
---
-include::partial$features/config-xml.adoc[]
---
+[source,xml,subs="+attributes"]
+----
+<dependency>
+  <groupId>com.lmax</groupId>
+  <artifactId>disruptor</artifactId>
+  <version>{disruptor-version}</version>
+  <scope>runtime</scope>
+</dependency>
+----
 
-log4j2.json::
+Gradle::
 +
---
-include::partial$features/config-json.adoc[]
---
-
-log4j2.yaml::
-+
---
-include::partial$features/config-yaml.adoc[]
---
-
-log4j2.properties::
-+
---
-include::partial$features/config-properties.adoc[]
---
-
-=====
+[source,groovy,subs="+attributes"]
+----
+runtimeOnly 'com.lmax:disruptor:{disruptor-version}'
+----
+====
