--- a/src/site/antora/modules/ROOT/partials/features/config-json.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/config-json.adoc
@@ -15,19 +15,21 @@
     limitations under the License.
 ////
 
-// This file contains the dependencies required to enable Asynchronous Loggers.
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable JSON configuration.
 
 [tabs]
 ====
+
 Maven::
 +
 [source,xml,subs="+attributes"]
 ----
 <dependency>
-  <groupId>com.lmax</groupId>
-  <artifactId>disruptor</artifactId>
-  <version>{disruptor-version}</version>
-  <scope>runtime</scope>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>{jackson-version}</version>
+    <scope>runtime</scope>
 </dependency>
 ----
 
@@ -35,6 +37,7 @@ Gradle::
 +
 [source,groovy,subs="+attributes"]
 ----
-runtimeOnly 'com.lmax:disruptor:{disruptor-version}'
+runtimeOnly 'com.fasterxml.jackson.core:jackson-databind:{jackson-version}'
 ----
+
 ====
