--- a/src/site/antora/modules/ROOT/partials/features/queue-jctools.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/queue-jctools.adoc
@@ -15,13 +15,27 @@
     limitations under the License.
 ////
 
-include::partial$components/log4j-jakarta-web.adoc[]
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable the blocking queue based on JCTools.
 
-.Click here if you are you using Jakarta EE 8 or any version of Java EE?
-[%collapsible]
-=====
-Jakarta EE 8 and all Java EE applications servers use the legacy `javax` package prefix instead of `jakarta`.
-If you are using those application servers, you should replace the dependencies above with:
+[tabs]
+====
+Maven::
++
+[source,xml,subs="+attributes"]
+----
+<dependency>
+  <groupId>org.jctools</groupId>
+  <artifactId>jctools-core</artifactId>
+  <version>{jctools-version}</version>
+  <scope>runtime</scope>
+</dependency>
+----
 
-include::partial$components/log4j-web.adoc[]
-=====
+Gradle::
++
+[source,groovy,subs="+attributes"]
+----
+runtimeOnly 'org.jctools:jctools-core:{jctools-version}'
+----
+====
