--- a/src/site/antora/modules/ROOT/partials/manual/systemproperties/properties-jndi.adoc
+++ b/src/site/antora/modules/ROOT/partials/manual/systemproperties/properties-jndi.adoc
@@ -25,7 +25,7 @@
 |===
 
 When `true` the `JndiContextSelector` is enabled for the `java:` protocol.
-See xref:jakarta.adoc#use-jndi-context-selector[Web application] for more details.
+See xref:jakarta.adoc#jndi-configuration[Web application] for more details.
 
 [id=log4j2.enableJndiJdbc]
 == `log4j2.enableJndiJdbc`
