--- a/src/site/antora/modules/ROOT/partials/manual/systemproperties/properties-log4j-jul.adoc
+++ b/src/site/antora/modules/ROOT/partials/manual/systemproperties/properties-log4j-jul.adoc
@@ -69,17 +69,24 @@ Fully qualified name of an alternative `org.apache.logging.log4j.jul.LevelConver
 |===
 | Env. variable | `LOG4J_JUL_LOGGER_ADAPTER`
 | Type          | `Class<? extends AbstractLoggerAdapter>`
-| Default value | _depends on classpath_
+| Default value | `org.apache.logging.log4j.jul.ApiLoggerAdapter`
 |===
 
 Fully qualified class name of the `org.apache.logging.log4j.jul.AbstractLoggerAdapter` implementation to use.
 
-This property allows users to choose between two implementation of the logging bridge:
+This property allows users to choose between two implementations of the logging bridge:
 
-org.apache.logging.log4j.jul.CoreLoggerAdapter::
-The default if `log4j-core` is found in the class path.
+`org.apache.logging.log4j.jul.CoreLoggerAdapter`::
 It allows users to modify the Log4j Core configuration through the JUL https://docs.oracle.com/javase/{java-target-version}/docs/api/java/util/logging/Logger.html[`Logger`] interface.
+It requires the usage of the
+xref:manual/implementation.adoc[Log4j Core]
+implementation.
 
-org.apache.logging.log4j.jul.ApiLoggerAdapter::
-The default if `log4j-core` cannot be found in the class path.
+`org.apache.logging.log4j.jul.ApiLoggerAdapter`::
 It disables the level mutators in the JUL `Logger` interface.
+
+[NOTE]
+====
+Since version 2.24.0 the default value changed to `ApiLoggerAdapter`.
+If you need to modify log levels via JUL, you need to select `CoreLoggerAdapter` explicitly.
+====
