Document module deprecation in 2.x
Since layout deprecation was already done in #2527, we
document:

* The deprecation of some appenders, pointing to third-party
alternatives, when possible.
* The deprecation of the Log4j Tag library.

The Spring Boot Lookup and Java EE SMTP Appender will
disappear in version 3.x, but will be replaced with the
Spring Boot 3 Lookup (in Spring Boot) and Jakarta EE
SMTP Appender.

Co-authored-by: Volkan Yazıcı <volkan@yazi.ci>

--- a/src/site/antora/modules/ROOT/pages/jakarta.adoc
+++ b/src/site/antora/modules/ROOT/pages/jakarta.adoc
@@ -267,6 +267,12 @@ include::example$manual/webapp/AsyncServlet.java[tag=manual]
 [#log4j-taglib]
 === Logging in JavaServer Pages
 
+[WARNING]
+====
+*The Log4j Tag library is planned to be removed in the next major release!*
+If you are using this library, please get in touch with the Log4j maintainers using link:{logging-services-url}/support.html[the official support channels].
+====
+
 To help users add logging statements to JavaServer Pages, Log4j provides a JSP tag library modeled after the
 https://web.archive.org/web/20140215182415/http://jakarta.apache.org/taglibs/log/[Jakarta Commons Log Tag library].
 To use it, you need to add the following runtime dependency to your web application project:
