--- a/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
@@ -679,6 +679,8 @@ include::example$manual/appenders/message-queue/jms-message.properties[tag=appen
 [[KafkaAppender]]
 == Kafka Appender
 
+include::partial$manual/appender-deprecation.adoc[]
+
 The KafkaAppender logs events to an https://kafka.apache.org/[Apache Kafka] topic.
 Each log event is sent as a
 https://kafka.apache.org/30/javadoc/org/apache/kafka/clients/producer/ProducerRecord.html[`ProducerRecord<byte[\], byte[\]>`], where:
@@ -902,6 +904,13 @@ include::example$manual/appenders/message-queue/kafka.properties[tag=loggers]
 
 [[JeroMqAppender]]
 == ZeroMQ/JeroMQ Appender
+
+[WARNING]
+====
+*This appender is planned to be removed in the next major release!*
+Users should consider switching to
+https://github.com/fbacchella/loghublog4j2#zmqappender[a third-party `ZMQ` appender].
+====
 
 The ZeroMQ appender uses the https://github.com/zeromq/jeromq[JeroMQ] library to send log events to one or more ZeroMQ endpoints.
 
