Move JNDI `DataSource` to separate module (#2915)
We move the [`DataSource` connection source](https://logging.staged.apache.org/log4j/3.x/manual/appenders/database.html#DataSourceConnectionSource)
to a new module `log4j-jdbc-jndi`.

The main rationale for this change is to remove the **optional** dependency
on `log4j-jndi` from `log4j-jdbc`.
This change forces users to opt-in for the JNDI `DataSource` by adding `log4j-jdbc-jndi` to their classpath.

After this change, the `log4j-jdbc` artifact contains:

* the `JDBC` Appender,
* a connection source based on `DriverManager`,
* a connection source based on a static factory method.

Closes #1914

--- a/src/site/antora/modules/ROOT/pages/components.adoc
+++ b/src/site/antora/modules/ROOT/pages/components.adoc
@@ -224,6 +224,23 @@ include::partial$components/log4j-jdbc.adoc[]
 The `log4j-jdbc-dbcp2` artifact contains a data source for the
 xref:manual/appenders/database.adoc#JdbcAppender[JDBC Appender]
 that uses
+https://docs.oracle.com/javase/tutorial/jndi/overview/index.html[JNDI].
+
+See xref:manual/appenders/database.adoc#DataSourceConnectionSource[`DataSource` connection source] for more details.
+
+include::partial$components/log4j-jdbc-jndi.adoc[]
+
+[#log4j-jdbc-jndi]
+== `log4j-jdbc-jndi`
+
+|===
+| JPMS module
+| `org.apache.logging.log4j.jdbc.jndi`
+|===
+
+The `log4j-jdbc-jndi` artifact contains a data source for the
+xref:manual/appenders/database.adoc#JdbcAppender[JDBC Appender]
+that uses
 https://commons.apache.org/proper/commons-dbcp/[Apache Commons DBCP].
 
 See xref:manual/appenders/database.adoc#PoolingDriverConnectionSource[`PoolingDriver` connection source] for more details.
