Split and modernize JANSI support.
This commit:

- Adds a new `ConsoleStreamProvider` plugin type that can decide how the Console Appender stream is built.
- Moves JAnsi support to a new `log4j-jansi` module.
- Upgrades the JAnsi library to version 2.x

Fixes #1736.

--- a/src/site/antora/modules/ROOT/pages/components.adoc
+++ b/src/site/antora/modules/ROOT/pages/components.adoc
@@ -182,6 +182,24 @@ for more information.
 
 include::partial$components/log4j-flume-ng.adoc[]
 
+[#log4j-jansi]
+== `log4j-jansi`
+
+|===
+| JPMS module
+| `org.apache.logging.log4j.jansi`
+|===
+
+The `log4j-jansi` artifact contains an extension for the
+xref:manual/appenders.adoc#ConsoleAppender[Console Appender]
+that uses the
+https://fusesource.github.io/jansi/[JAnsi library]
+to handle ANSI escapes.
+
+See xref:manual/systemproperties.adoc#log4j.console.jansiEnabled[`log4j.console.jansiEnabled`] for more details.
+
+include::partial$components/log4j-jansi.adoc[]
+
 [#log4j-jctools]
 == `log4j-jctools`
 
