--- a/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
@@ -357,9 +357,8 @@ xref:plugin-reference.adoc#org-apache-logging-log4j_log4j-flume-ng_org-apache-lo
 === Flume event factories
 
 Flume event factories are Log4j plugins that implement the
-link:../../javadoc/log4j-flume-ng/org/apache/logging/log4j/flume/appender/FlumeEventFactory.html[`FlumeEventFactory`]
-and allow to customize the way log events are transformed into
-link:../../javadoc/log4j-flume-ng/org/apache/logging/log4j/flume/appender/FlumeEvent.html[`FlumeEvent`]s.
+`org.apache.logging.log4j.flume.appender.FlumeEventFactory`
+and allow to customize the way log events are transformed into `org.apache.logging.log4j.flume.appender.FlumeEvent`s.
 
 xref:plugin-reference.adoc#org-apache-logging-log4j_log4j-flume-ng_org-apache-logging-log4j-flume-appender-FlumeEventFactory[{plugin-reference-marker} Plugin reference for `FlumeEventFactory`]
 
