Document GraalVM usage with Log4j
We document the usage of GraalVM together with all official
Log4j API implementations.

Part of #2831.

--- a/src/site/antora/modules/ROOT/nav.adoc
+++ b/src/site/antora/modules/ROOT/nav.adoc
@@ -70,6 +70,7 @@
 * xref:migrate-from-log4j1.adoc[]
 * xref:migrate-from-logback.adoc[]
 * xref:migrate-from-slf4j.adoc[]
+* xref:graalvm.adoc[]
 * xref:hibernate.adoc[]
 * xref:jakarta.adoc[]
 * xref:soa.adoc[]
